# src/models/bookorder.go
@@ -8,15 +8,15 @@ import(
 )
 
 type Bookorder struct {
-	Orderid      string `json:"newid" valid:"Required" orm:"pk;size(20);column(orderid);"`
+	Orderid     string `json:"newid" valid:"Required" orm:"pk;size(20);column(orderid);"`
 	Userid_from	string	`json:"userid_from" valid:"Required"`
 	Userid_to	string	`json:"userid_to" valid:"Required"`
 	Bookqid	    string	`json:"bookqid" valid:"Required"`
 	Books       string  `json:"books"  valid:"Required"`
 	User_from   string	`json:"user_from" valid:"Required"`
 	User_to     string	`json:"user_to"`
-	Order_type  uint8   `json:"order_state" valid:"Required;Range(1,2)"`
-	Order_state uint8   `json:"order_state" valid:"Required;Range(1,2,3)"`
+	Order_type  int64   `json:"order_state" valid:"Required;Range(1,2)"`
+	Order_state int64   `json:"order_state" valid:"Required;Range(1,2,3)"`
 	Create_time int64	`json:"create_time"`
 	Update_time int64	`json:"update_time"`
 }
@@ -30,7 +30,7 @@ func init()  {
 }
 
 func  BookOrderListData(start int,length int,conditions string) (order []*Bookorder){
-	var  rowsSql  = "select * from  lb_bookorder  where true "+conditions+"  order by pushtime desc  limit " + strconv.Itoa(start) + "," + strconv.Itoa(length)
+	var  rowsSql  = "select * from  lb_bookorder  where true "+conditions+"  order by update_time desc  limit " + strconv.Itoa(start) + "," + strconv.Itoa(length)
 	o := orm.NewOrm()
 	o.Raw(rowsSql).QueryRows(&order)
 	return  order
@@ -38,9 +38,16 @@ func  BookOrderListData(start int,length int,conditions string) (order []*Bookor
 
 func  BookOrderListDatback(start int,length int,conditions string) (order []*Bookorder,total int){
 	var  countSql = "select count(*) from  lb_bookorder  where true "+conditions
-	var  rowsSql  = "select * from  lb_bookorder  where true "+conditions+"  order by pushtime desc  limit " + strconv.Itoa(start) + "," + strconv.Itoa(length)
+	var  rowsSql  = "select * from  lb_bookorder  where true "+conditions+"  order by update_time desc  limit " + strconv.Itoa(start) + "," + strconv.Itoa(length)
 	o := orm.NewOrm()
 	o.Raw(countSql).QueryRow(&total) //获取总条数
 	o.Raw(rowsSql).QueryRows(&order)
 	return  order,total
+}
+
+func  BookOrderInfo(conditions string) (order *Bookorder,err error){
+	var  rowsSql  = "select * from  lb_bookorder  where true "+conditions+"  order by update_time desc  limit 1"
+	o := orm.NewOrm()
+	err = o.Raw(rowsSql).QueryRow(&order)
+	return
 }
